# wayshot

./: .gitignore  AI_CONTEXT.MD  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
data/: io.github.gutopardini.wayshot.desktop  io.github.gutopardini.wayshot.metainfo.xml
flatpak/: README.md  SUBMISSION.md  cargo-sources.json  io.github.gutopardini.wayshot.yml
scripts/: install-gnome-shortcut  wayshot-gnome-capture
src/: editor.rs  main.rs  ui.rs
